--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,12 @@
 [user]
 	name = Allen Ji
 	email = ajixuan11@gmail.com
+[alias]
+    a = add
+    r = reset
+    st = status
+    br = branch
+	co = checkout
+    ci = commit
+    ps = push
+    pl = pull
