--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,12 @@ set -sg escape-time 0
 # Set vim mode keybindings
 set-window-option -g mode-keys vi
 
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
 # Vim switch windows
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -26,3 +32,17 @@ bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
                           tmux select-pane -R"
 
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind -n M-l select-pane -R
+bind -n M-h select-pane -L
+bind -n M-j select-pane -U
+bind -n M-k select-pane -D
+
+bind -n C-M-l resize-pane -R 10
+bind -n C-M-h resize-pane -L 10
+bind -n C-M-j resize-pane -U 10
+bind -n C-M-k resize-pane -D 10
+
+# Reload configs
+bind C-r source-file ~/.tmux.conf
+
