make better copy mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,12 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Better copy mode
+bind v copy-mode
+bind p paste-buffer
+unbind '['
+unbind ']'
+
 # Vim switch windows
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
