--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,9 +46,12 @@ bind -n M-k select-pane -D
 
 bind -n C-M-l resize-pane -R 10
 bind -n C-M-h resize-pane -L 10
-bind -n C-M-j resize-pane -U 10
-bind -n C-M-k resize-pane -D 10
+bind -n C-M-j resize-pane -D 10
+bind -n C-M-k resize-pane -U 10
 
 # Reload configs
 bind C-r source-file ~/.tmux.conf
 
+# copy to clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi v send-keys -X begin-selection
