auto resizing vim windows when resizing tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,10 +44,10 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -U
 bind -n M-k select-pane -D
 
-bind -n C-M-l resize-pane -R 10
-bind -n C-M-h resize-pane -L 10
-bind -n C-M-j resize-pane -D 10
-bind -n C-M-k resize-pane -U 10
+bind -n C-M-l resize-pane -R 10 \; run "($is_vim && tmux send-keys C-w \"=\")"
+bind -n C-M-h resize-pane -L 10 \; run "($is_vim && tmux send-keys C-w \"=\")"
+bind -n C-M-j resize-pane -D 10 \; run "($is_vim && tmux send-keys C-w \"=\")"
+bind -n C-M-k resize-pane -U 10 \; run "($is_vim && tmux send-keys C-w \"=\")"
 
 # Reload configs
 bind C-r source-file ~/.tmux.conf
