--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ unbind '"'
 unbind %
 
 # Better copy mode
-bind v copy-mode
+bind -n C-M-v copy-mode
 bind p paste-buffer
 unbind '['
 unbind ']'
@@ -23,21 +23,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 is_fzf="ps -o state= -o comm= -t '#{pane_tty}' \
   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?fzf$'"
 
-bind -n C-h run "($is_vim && tmux send-keys C-h) || \
-                          tmux select-pane -L"
-
-bind -n C-j run "($is_vim && tmux send-keys C-j) || \
-                 ($is_fzf && tmux send-keys C-j) || \
-                 tmux select-pane -D"
-
-bind -n C-k run "($is_vim && tmux send-keys C-k) || \
-                 ($is_fzf && tmux send-keys C-k) || \
-                 tmux select-pane -U"
-
-bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
-                          tmux select-pane -R"
-
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind -n M-l select-pane -R
 bind -n M-h select-pane -L
@@ -54,7 +40,7 @@ bind -n C-M-k resize-pane -U 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
 
 # Reload configs
-bind C-r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf
 
 # copy to clipboard
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
