better pane movement

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -sg escape-time 0
 # Set vim mode keybindings
 set-window-option -g mode-keys vi
 
+# Refresh client
+bind BSpace source-file ~/.tmux.conf \; display-message "Config reloaded.."
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -23,10 +26,26 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 is_fzf="ps -o state= -o comm= -t '#{pane_tty}' \
   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?fzf$'"
 
-bind -n M-l select-pane -R
-bind -n M-h select-pane -L
-bind -n M-j select-pane -U
-bind -n M-k select-pane -D
+bind -n C-h run "($is_vim && tmux send-keys C-h) || \
+                          tmux select-pane -L"
+
+bind -n C-j run "($is_vim && tmux send-keys C-j)  || \
+                         ($is_fzf && tmux send-keys C-j) || \
+                         tmux select-pane -D"
+
+bind -n C-k run "($is_vim && tmux send-keys C-k) || \
+                          ($is_fzf && tmux send-keys C-k)  || \
+                          tmux select-pane -U"
+
+bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
+                          tmux select-pane -R"
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
+
+# Moving panes
+bind p previous-window
 
 bind -n C-M-l resize-pane -R 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
@@ -36,9 +55,6 @@ bind -n C-M-j resize-pane -D 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
 bind -n C-M-k resize-pane -U 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
-
-# Reload configs
-bind r source-file ~/.tmux.conf
 
 # copy to clipboard
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
