better moving panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,20 +4,28 @@ set -sg escape-time 0
 # Set vim mode keybindings
 set-window-option -g mode-keys vi
 
-# Refresh client
+# Tmux stuff
 bind BSpace source-file ~/.tmux.conf \; display-message "Config reloaded.."
+bind ? list-keys -N
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
 
 # Better copy mode
 bind -n C-M-v copy-mode
 bind p paste-buffer
 unbind '['
 unbind ']'
+
+# copy to clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi v send-keys -X begin-selection
+
+######
+# Panes and windows
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 # Vim switch windows
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -39,6 +47,11 @@ bind -n C-k run "($is_vim && tmux send-keys C-k) || \
 
 bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
                           tmux select-pane -R"
+bind C-h resize-pane -L 20
+bind C-l resize-pane -R 20
+bind C-k resize-pane -U 20
+bind C-j resize-pane -D 20
+
 bind h select-pane -L
 bind l select-pane -R
 bind k select-pane -U
@@ -56,6 +69,3 @@ bind -n C-M-j resize-pane -D 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
 bind -n C-M-k resize-pane -U 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
 
-# copy to clipboard
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-bind -T copy-mode-vi v send-keys -X begin-selection
