--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,25 +47,20 @@ bind -n C-k run "($is_vim && tmux send-keys C-k) || \
 
 bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
                           tmux select-pane -R"
-bind C-h resize-pane -L 20
-bind C-l resize-pane -R 20
-bind C-k resize-pane -U 20
-bind C-j resize-pane -D 20
-
-bind h select-pane -L
-bind l select-pane -R
-bind k select-pane -U
-bind j select-pane -D
+bind C-h select-pane -L
+bind C-l select-pane -R
+bind C-k select-pane -U
+bind C-j select-pane -D
 
 # Moving panes
 bind p previous-window
 
-bind -n C-M-l resize-pane -R 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
+bind -n C-M-l resize-pane -R 25 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
-bind -n C-M-h resize-pane -L 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
+bind -n C-M-h resize-pane -L 25 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
-bind -n C-M-j resize-pane -D 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
+bind -n C-M-j resize-pane -D 25 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
-bind -n C-M-k resize-pane -U 10 \; run "($is_vim && tmux send-keys C-w \"=\") \
+bind -n C-M-k resize-pane -U 25 \; run "($is_vim && tmux send-keys C-w \"=\") \
 || true"
 
