--- a/.gitconfig
+++ b/.gitconfig
@@ -23,3 +23,8 @@
 	helper = cache --timeout=3600
 [pull]
 	rebase = false
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
