--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -100,7 +100,7 @@ scrolling:
 #tabspaces: 8
 
 # Font configuration
-#font:
+font:
 #  # Normal (roman) font face
 #  normal:
 #    # Font family
@@ -180,7 +180,7 @@ scrolling:
 #    style: Bold Italic
 #
 #  # Point size
-#  size: 11.0
+  size: 9.0
 #
 #  # Offset is the extra space around each character. `offset.y` can be thought of
 #  # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
