tmux source bashrc instead of bash_profile

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,12 @@ set -sg escape-time 0
 # Set vim mode keybindings
 set-window-option -g mode-keys vi
 
+# force tmux to source bashrc
+set-option -g default-command "/bin/bash"
+
 # Tmux stuff
 bind BSpace source-file ~/.tmux.conf \; display-message "Config reloaded.."
 bind ? list-keys -N
-
 
 # Better copy mode
 bind -n C-M-v copy-mode
