--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -564,14 +564,14 @@ background_opacity: 0.80
 # a no-op if you do not wish to receive input characters for that binding.
 key_bindings:
     # (Windows, Linux, and BSD only)
-  - { key: V,        mods: Control|Shift, action: Paste            }
-  - { key: C,        mods: Control|Shift, action: Copy             }
-  - { key: Insert,   mods: Shift,         action: PasteSelection   }
-  - { key: Key0,     mods: Control,       action: ResetFontSize    }
-  - { key: Equals,   mods: Control,       action: IncreaseFontSize }
-  - { key: Add,      mods: Control,       action: IncreaseFontSize }
-  - { key: Subtract, mods: Control,       action: DecreaseFontSize }
-  - { key: Minus,    mods: Control,       action: DecreaseFontSize }
+  - { key: V,               mods: Control|Shift, action: Paste            }
+  - { key: C,               mods: Control|Shift, action: Copy             }
+  - { key: Insert,          mods: Shift,         action: PasteSelection   }
+  - { key: Key0,            mods: Control,       action: ResetFontSize    }
+  - { key: Equals,          mods: Control,       action: IncreaseFontSize }
+  - { key: NumpadAdd,       mods: Control,       action: IncreaseFontSize }
+  - { key: NumpadSubtract,  mods: Control,       action: DecreaseFontSize }
+  - { key: Minus,           mods: Control,       action: DecreaseFontSize }
 
   - { key: Paste,                    action: Paste                            }
   - { key: Copy,                     action: Copy                             }
