turn off auto cycle pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
 # No escape delay
 set -sg escape-time 0
 
+#window options
 # Set vim mode keybindings
 set-window-option -g mode-keys vi
+set-window-option -g wrap-search off
 
 # force tmux to source bashrc
 set-option -g default-command "/bin/bash"
@@ -28,6 +30,7 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+unbind 'l'
 
 # Vim switch windows
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -37,22 +40,24 @@ is_fzf="ps -o state= -o comm= -t '#{pane_tty}' \
   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?fzf$'"
 
 bind -n C-h run "($is_vim && tmux send-keys C-h) || \
-                          tmux select-pane -L"
+                          if [ $(tmux display-message -p '#{pane_at_left}') -ne 1 ]; then tmux select-pane -L; fi"
+
+bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
+                          if [ $(tmux display-message -p '#{pane_at_right}') -ne 1 ]; then tmux select-pane -R; fi"
 
 bind -n C-j run "($is_vim && tmux send-keys C-j)  || \
                          ($is_fzf && tmux send-keys C-j) || \
-                         tmux select-pane -D"
+                         if [ $(tmux display-message -p '#{pane_at_bottom}') -ne 1 ]; then tmux select-pane -D; fi"
 
 bind -n C-k run "($is_vim && tmux send-keys C-k) || \
                           ($is_fzf && tmux send-keys C-k)  || \
-                          tmux select-pane -U"
+                          if [ $(tmux display-message -p '#{pane_at_top}') -ne 1 ]; then tmux select-pane -U; fi"
 
-bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
-                          tmux select-pane -R"
-bind C-h select-pane -L
-bind C-l select-pane -R
-bind C-k select-pane -U
-bind C-j select-pane -D
+
+bind C-h if -bF '#{pane_at_left}' '' 'select-pane -L'
+bind C-l if -bF '#{pane_at_right}' '' 'select-pane -R'
+bind C-k if -bF '#{pane_at_top}' '' 'select-pane -U'
+bind C-j if -bF '#{pane_at_bottom}' '' 'select-pane -D'
 
 # Moving panes
 bind p previous-window
