--- a/alis/alis.conf
+++ b/alis/alis.conf
@@ -28,7 +28,7 @@ LOG="false"
 ### "manual" allows to specify which existing partitions are used for boot partition and root partition.
 DEVICE="/dev/sda !/dev/nvme0n1 !/dev/mmcblk0" # sata nvme mmc (single)
 DEVICE_TRIM="true"
-LVM="false"
+LVM="true"
 LUKS_PASSWORD=""
 LUKS_PASSWORD_RETYPE=""
 FILE_SYSTEM_TYPE="!ext4 btrfs !xfs !f2fs !reiserfs" # (single)
@@ -125,7 +125,7 @@ CUSTOM_SHELL="bash !zsh !dash !fish" # (single)
 
 # desktop
 ## DESKTOP_ENVIRONMENT installs a desktop environment.
-DESKTOP_ENVIRONMENT="!gnome kde !xfce !mate !cinnamon !lxde !i3-wm !i3-gaps !deepin" # (single)
+DESKTOP_ENVIRONMENT="!gnome !kde !xfce !mate !cinnamon !lxde i3-wm !i3-gaps !deepin" # (single)
 
 # packages (all multiple)
 ## PACKAGES_MULTILIB configures multilib repository for pacman and install multilib packages for display driver
