scuffed tmux paste

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,14 +14,13 @@ bind BSpace source-file ~/.tmux.conf \; display-message "Config reloaded.."
 bind ? list-keys -N
 
 # Better copy mode
-bind -n C-M-v copy-mode
-bind p paste-buffer
-unbind '['
-unbind ']'
-
 # copy to clipboard
+bind -n C-M-v copy-mode
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi p paste-buffer
+unbind '['
+unbind ']'
 
 ######
 # Panes and windows
