--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
         r = reset
         st = status
         br = branch
-            co = checkout
+        co = checkout
         ci = commit
         ps = push
         pl = pull
@@ -14,6 +14,7 @@
         dc = diff --cached
         cp = cherry-pick
         rv = rev-parse HEAD
+        cl = clone
 [core]
 	hooksPath = .githooks
 	editor = nvim
