--- a/nix/.config/alacritty/alacritty.toml
+++ b/nix/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-"window.opacity" = 0.8
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -124,6 +123,7 @@ history = 10000
 
 [window]
 title = "Alacritty"
+opacity = 0.8
 
 [window.class]
 general = "Alacritty"
